--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-* {
+  {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -11,3 +11,4 @@ body {
     background-color: #f2cb05;
     margin-left: 20px;
 }
+ 
